Removed references to files no longer needed as part of pyipopt dist

--- a/contrib/pyipopt/MANIFEST.in
+++ b/contrib/pyipopt/MANIFEST.in
@@ -1,1 +1,1 @@
-include callback.c hook.h IpReturnCodes_inc.h IpStdCInterface.cpp makefile pyipopt.c README 
+include callback.c hook.h pyipopt.c README 
